Hover icone header e pulizia codice

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <!-- /Barra di ricerca -->
                 <!-- Menù Header -->
                 <ul class="col-auto d-flex ms-header-icons list-unstyled m-0">
-                    <li><a href="#"><i class="fa-solid fa-list-ul me-3 d-none d-lg-inline-block"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-circle-question me-3 d-none d-lg-inline-block"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-ellipsis-vertical me-3 d-none d-lg-inline-block"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-list-ul px-2 d-none d-lg-inline-block"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-circle-question px-2 d-none d-lg-inline-block"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-ellipsis-vertical px-2 d-none d-lg-inline-block"></i></a></li>
                     <li>
-                        <a href="#" data-bs-toggle="dropdown" class="ms-bell"><i class="fa-solid fa-bell"></i></a>
+                        <a href="#" data-bs-toggle="dropdown" class="ms-bell ps-2"><i class="fa-solid fa-bell"></i></a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Profilo</a></li>
                             <li><a class="dropdown-item" href="#">Fatturazione</a></li>
