--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                                     <table class="table table-hover">
                                         <thead class="fst-normal">
                                             <tr>
-                                            <th class="col-6 col-md-4 flex-grow-1" scope="col">Nome</th>
-                                            <th class="col-md-2 col-lg-1 d-none d-md-table-cell" scope="col">Data inizio</th>
+                                            <th class="col-8 col-md-4 flex-grow-1" scope="col">Nome</th>
+                                            <th class="col-md-1 col-lg-1 d-none d-md-table-cell" scope="col">Data inizio</th>
                                             <th class="col-md-2 col-lg-1 d-none d-md-table-cell" scope="col">ROI</th>
                                             <th class="col-3 col-md-2 col-lg-1" scope="col">Stato</th>
-                                            <th class="col-3 col-md-2 col-lg-1" scope="col">Azioni</th>
+                                            <th class="col-3 col-md-1 col-lg-1" scope="col">Azioni</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -134,10 +134,10 @@
                                             <td>
                                                 <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 75</span>  
                                             </td>
-                                            <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell text-nowrap">15 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
                                             <td><span class="badge text-bg-success">Done</span></td>
-                                            <td>
+                                            <td class="text-nowrap">
                                                 <i class="fa-solid fa-pen me-1"></i>
                                                 <i class="fa-solid fa-trash"></i>
                                             </td>
